crates/paladin-auth-cli/tests/snapshots/cli_json_snapshots__snapshot_list_populated_vault_envelope.snap
---
source: crates/paladin-auth-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&out)
---
{
  "accounts": [
    {
      "algorithm": "sha1",
      "code": "[totp-code]",
      "counter": null,
      "created_at": "[timestamp]",
      "digits": 6,
      "icon_hint": "acme",
      "id": "[uuid]",
      "issuer": "Acme",
      "kind": "totp",
      "label": "alice",
      "next_code": "[totp-code]",
      "period": 30,
      "seconds_remaining": "[seconds-remaining]",
      "updated_at": "[timestamp]"
    },
    {
      "algorithm": "sha1",
      "code": null,
      "counter": 42,
      "created_at": "[timestamp]",
      "digits": 6,
      "icon_hint": null,
      "id": "[uuid]",
      "issuer": null,
      "kind": "hotp",
      "label": "bob",
      "next_code": null,
      "period": null,
      "seconds_remaining": null,
      "updated_at": "[timestamp]"
    }
  ]
}
