crates/paladin-auth-cli/tests/snapshots/cli_json_snapshots__snapshot_multiple_matches_envelope.snap
---
source: crates/paladin-auth-cli/tests/cli_json_snapshots.rs
expression: parse_stderr_json(&assert)
---
{
  "candidates": [
    {
      "algorithm": "sha1",
      "counter": null,
      "created_at": "[timestamp]",
      "digits": 6,
      "disambiguator": "[disambiguator]",
      "icon_hint": "acme",
      "id": "[uuid]",
      "issuer": "Acme",
      "kind": "totp",
      "label": "alice",
      "period": 30,
      "updated_at": "[timestamp]"
    },
    {
      "algorithm": "sha1",
      "counter": 7,
      "created_at": "[timestamp]",
      "digits": 6,
      "disambiguator": "[disambiguator]",
      "icon_hint": null,
      "id": "[uuid]",
      "issuer": null,
      "kind": "hotp",
      "label": "Acme-bob",
      "period": null,
      "updated_at": "[timestamp]"
    }
  ],
  "error_kind": "multiple_matches"
}
